starting on export functionality, adding html-inline-css translator - curr impl does not transfer class key's correctly ie textAlign !== text-align

--- a/src/layouts/SideNavbar/index.module.scss
+++ b/src/layouts/SideNavbar/index.module.scss
@@ -25,3 +25,10 @@
 
   background: #6F6F6F;
 }
+
+.builder-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 8px;
+}
